<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AInScan LoadQueue</string>
    <string name="detect_devices">Detect DAQ devices</string>
    <string name="connect_device">Connect</string>
    <string name="disconnect_device">Disconnect</string>
    <string name="status_text">&quot;Status: &quot;</string>
    <string name="empty"></string>
    <string name="chanMode_text">Channel Mode:</string>
    <string name="gainQueue_text">Gain Queue:</string>
    <string name="unit_text">Unit:</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="samplesPerChan_text">Samples per Channel:</string>
    <string name="defaultNumSamples_text">10000</string>
    <string name="rate_text">Rate:</string>
    <string name="chanQueue_text">Channel Queue:</string>
    <string name="net_detect_text">Detect</string>
    <string name="cancel_text">Cancel</string>
    <string name="ip_addr_text">IP address or host name:</string>
    <string name="port_text">Port:</string>

</resources>