<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AInScanLoadQueueActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_detect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detect_devices" />

        <Spinner
            android:id="@+id/spinner_daqDev"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect_device"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_disconnect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disconnect_device"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="5dp" >

        <TextView
            android:id="@+id/textView_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView_errInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="#165B12" 
            android:paddingBottom="7dp"/>
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FCFCFC"
        android:fadeScrollbars="false" >

        <RelativeLayout
            android:id="@+id/RelativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginTop="10dp"
            android:background="#FCFCFC"
            android:orientation="vertical" >   
            
            <CheckBox
                android:id="@+id/checkbox_chanQueue"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_toRightOf="@+id/textView_chanQueue" />
            
             <TextView
                android:id="@+id/textView_chanQueue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignTop="@id/checkbox_chanQueue"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="14dp"
                android:text="@string/chanQueue_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />
            
             <CheckBox
                android:id="@+id/checkbox_gainQueue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/checkbox_chanQueue"
                android:layout_alignRight="@id/checkbox_chanQueue"
                android:layout_below="@id/checkbox_chanQueue" />

            <Spinner
                android:id="@+id/spinner_chanMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/checkbox_gainQueue"
                android:layout_alignRight="@id/checkbox_gainQueue"
                android:layout_below="@id/checkbox_gainQueue" />
            
             <EditText
                android:id="@+id/editText_samplesPerChan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/spinner_chanMode"
                android:layout_alignRight="@id/spinner_chanMode"
                android:layout_below="@id/spinner_chanMode"
                android:ems="10"
                android:inputType="number"
                android:text="@string/defaultNumSamples_text" />
             
             <EditText
                android:id="@+id/editText_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_samplesPerChan"
                android:layout_alignRight="@id/editText_samplesPerChan"
                android:layout_below="@id/editText_samplesPerChan"
                android:ems="10"
                android:inputType="numberDecimal" />

            <Spinner
                android:id="@+id/spinner_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/editText_rate"
                android:layout_alignRight="@id/editText_rate"
                android:layout_below="@id/editText_rate" />
            
            <TextView
                android:id="@+id/textView_chanMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/spinner_chanMode"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/checkbox_chanQueue"
                android:text="@string/chanMode_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />          
            
            <TextView
                android:id="@+id/textView_gainQueue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/textView_chanMode"
                android:layout_alignTop="@id/checkbox_gainQueue"
                android:layout_marginTop="13dp"
                android:text="@string/gainQueue_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <TextView
                android:id="@+id/textView_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@id/textView_gainQueue"
                android:layout_alignTop="@id/spinner_unit"
                android:layout_below="@id/checkbox_gainQueue"
                android:layout_marginTop="10dp"
                android:text="@string/unit_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <ToggleButton
                android:id="@+id/toggleButton_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/spinner_unit"
                android:layout_alignRight="@id/spinner_unit"
                android:layout_below="@id/spinner_unit"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="5dp"
                android:checked="false"
                android:textOff="@string/start_button"
                android:textOn="@string/stop_button" />

            <TextView
                android:id="@+id/textView_samplesPerChan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/editText_samplesPerChan"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/editText_samplesPerChan"
                android:text="@string/samplesPerChan_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <TextView
                android:id="@+id/textView_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/editText_rate"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:layout_toLeftOf="@id/editText_rate"
                android:text="@string/rate_text"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#0E139F" />

            <LinearLayout
                android:id="@+id/layout_scanData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/toggleButton_start"
                android:layout_alignRight="@id/toggleButton_start"
                android:layout_below="@id/toggleButton_start"
                android:orientation="vertical" >
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_scanChans"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/textView_samplesPerChan"
                android:layout_alignRight="@id/textView_unit"
                android:layout_below="@id/toggleButton_start"
                android:orientation="vertical" >

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</LinearLayout>